crates/toml_edit/tests/fixtures/invalid/integer-underscore-before.stderr
TOML parse error at line 1, column 7
  |
1 | bad = _123
  |       ^
Invalid integer
Expected leading digit
